--- a/index.html
+++ b/index.html
@@ -14,23 +14,26 @@
 <body class="bg-black text-white">
 
     <!-- Hero Section -->
-    <section id="hero-section" class="relative h-screen flex items-center justify-center text-center">
-        <!-- Fondo con glitch -->
-        <div class="absolute inset-0 bg-black">
-            <video autoplay loop muted class="w-full h-full object-cover opacity-50">
-                <source src="assets/hero.mp4" type="video/mp4">
-            </video>
-        </div>
+<section id="hero-section" class="relative h-screen flex items-center justify-center text-center">
+    <!-- Fondo con glitch -->
+    <div class="absolute inset-0 bg-black">
+        <video autoplay loop muted class="w-full h-full object-cover opacity-50">
+            <source src="assets/hero.mp4" type="video/mp4">
+        </video>
+    </div>
 
-        <!-- Contenido principal -->
-        <div class="relative z-10">
-            <h1 class="text-5xl font-bold glitch">DESCUBRE LA VERDAD</h1>
-            <p class="mt-4 text-lg opacity-80">No todo es lo que parece... ¿Te atreves a continuar?</p>
-            <button class="mt-6 px-6 py-3 bg-red-600 hover:bg-red-800 text-white font-bold rounded-lg transition-all glitch-hover">
-                Entra si te atreves
-            </button>
-        </div>
-    </section>
+    <!-- Contenido principal -->
+    <div class="relative z-10 flex flex-col items-center justify-center pt-32">
+        <h1 class="text-5xl font-bold glitch">DESCUBRE LA VERDAD</h1>
+        <p class="mt-4 text-lg opacity-80">No todo es lo que parece... ¿Te atreves a continuar?</p>
+        
+        <!-- Botón corregido con margen superior -->
+        <a href="register.html" class="mt-10 px-6 py-3 bg-red-600 hover:bg-red-800 text-white font-bold rounded-lg transition-all glitch-hover">
+            Entra si te atreves
+        </a>
+    </div>
+</section>
+
 
 <!-- Sección de Historia -->
 <section class="relative flex flex-col items-center justify-center h-screen bg-black text-white px-6">
