--- a/register.html
+++ b/register.html
@@ -3,19 +3,71 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script type="module" src="js/auth.js"></script>
-  <script type="module" src="js/main.js"></script>
+  
+  <!-- Estilos -->
   <link href="src/output.css" rel="stylesheet">
-</head>
-<body class="bg-black text-white flex items-center justify-center h-screen">
 
-    <div class="max-w-md p-6 bg-gray-900 rounded-lg shadow-lg">
-        <h2 class="text-xl font-bold mb-4">Crea tu cuenta</h2>
-        <input id="email" type="email" placeholder="Tu correo" class="w-full p-2 mb-3 bg-gray-800 border border-gray-700 rounded">
-        <input id="password" type="password" placeholder="Tu contraseña" class="w-full p-2 mb-3 bg-gray-800 border border-gray-700 rounded">
-        <button id="registerBtn" class="w-full bg-red-700 hover:bg-red-800 text-white font-bold py-2 px-4 rounded">Registrarse</button>
-        <button id="googleBtn" class="w-full mt-2 bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Registrarse con Google</button>
+  <!-- Scripts -->
+  <script defer type="module" src="js/register.js"></script>
+  <script defer src="js/hack-animation.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+
+</head>
+<body class="bg-black text-green-400 flex items-center justify-center h-screen font-mono">
+
+    <!-- Terminal de Acceso -->
+    <div class="max-w-md p-6 bg-gray-900 rounded-lg shadow-lg border border-green-500 relative">
+        
+        <h2 class="text-lg font-bold mb-4">🟢 ACCEDIENDO AL SISTEMA...</h2>
+
+        <!-- Simulación de hackeo antes de mostrar los inputs -->
+        <div id="typewriter" class="text-sm mb-4 opacity-80"></div>
+
+        <!-- Sección de Registro (Oculta hasta que termine el "hackeo") -->
+        <div id="register-container" class="hidden">
+            
+            <p class="text-sm mb-4 opacity-80">Identificación requerida.</p>
+
+            <!-- Email Input -->
+            <label class="block text-sm opacity-70">Usuario:</label>
+            <input id="email" type="email" placeholder="usuario@redactado.com" 
+                   class="w-full p-2 mb-3 bg-gray-800 border border-green-500 rounded font-mono focus:outline-none focus:ring-2 focus:ring-green-500 transition-all">
+
+            <!-- Password Input -->
+            <label class="block text-sm opacity-70">Clave de acceso:</label>
+            <input id="password" type="password" placeholder="********" 
+                   class="w-full p-2 mb-3 bg-gray-800 border border-green-500 rounded font-mono focus:outline-none focus:ring-2 focus:ring-green-500 transition-all">
+
+            <!-- Botón Registro -->
+            <button id="registerBtn" 
+                    class="w-full bg-green-700 hover:bg-green-800 text-white font-bold py-2 px-4 rounded transition-all">
+                Registrarse
+            </button>
+
+            <!-- Registro con Google -->
+            <button id="googleBtn" 
+                    class="w-full mt-2 bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded transition-all">
+                Conectar con Google
+            </button>
+
+            <!-- Botón para Loguearse -->
+            <button id="loginBtn" 
+                    class="w-full mt-2 bg-gray-700 hover:bg-gray-800 text-white font-bold py-2 px-4 rounded transition-all">
+                Iniciar sesión
+            </button>
+
+            <!-- Mensajes de sistema -->
+            <p id="statusMessage" class="text-sm text-green-400 opacity-70 mt-4"></p>
+        </div>
     </div>
+<!-- Modal de éxito -->
+<div id="successModal" class="hidden fixed inset-0 flex items-center justify-center bg-black bg-opacity-70">
+  <div class="bg-gray-900 text-white p-6 rounded-lg shadow-lg border border-green-500">
+      <h2 class="text-lg font-bold">✅ Registro Exitoso</h2>
+      <p id="modalText" class="mt-2"></p>
+      <button id="closeModal" class="mt-4 px-4 py-2 bg-green-700 hover:bg-green-800 rounded-lg">Cerrar</button>
+  </div>
+</div>
 
 </body>
 </html>
